ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Report_Fields__c/CnP_PaaS__Report_Fields__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Report Fields</label>
    <nameField>
        <label>Report Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Report Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>