ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Report_Fields__c/fields/CnP_PaaS__Condition__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Equal</fullName>
            </value>
            <value>
                <fullName>Is less than</fullName>
            </value>
            <value>
                <fullName>Is less than or equal</fullName>
            </value>
            <value>
                <fullName>Is greater than or equal</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does Not contain</fullName>
            </value>
            <value>
                <fullName>Start With</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Is greater than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>