ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Report_Fields__c/fields/CnP_PaaS__fieldtype__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__fieldtype__c</fullName>
    <label>fieldtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>