ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Report_Fields__c/fields/CnP_PaaS__reportid__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__reportid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>reportid</label>
    <referenceTo>CnP_PaaS__DynamicReport__c</referenceTo>
    <relationshipName>Report_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>