ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Report_Fields__c/fields/CnP_PaaS__value__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__value__c</fullName>
    <label>value</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>